--- a/package.json
+++ b/package.json
@@ -5,12 +5,16 @@
   "private": true,
   "scripts": {
     "dev": "webpack-dev-server --color --progress --config build/dev.js",
-    "build": "node build/build.js"
+    "build": "node build/build.js",
+    "lint": "eslint --ext .js,.vue src"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/juddy-star/vue-multi-page.git"
   },
+  "pre-commit": [
+    "lint"
+  ],
   "keywords": [
     "vue",
     "multipart",
@@ -33,26 +37,36 @@
     "@babel/preset-env": "^7.4.2",
     "@babel/preset-stage-0": "^7.0.0",
     "autoprefixer": "^9.5.0",
+    "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.5",
     "bluebird": "^3.5.3",
     "chalk": "^2.4.2",
     "clean-webpack-plugin": "^2.0.1",
+    "commander": "^2.20.0",
     "css-loader": "^2.1.1",
+    "download-git-repo": "^1.1.0",
+    "eslint": "^5.16.0",
+    "eslint-loader": "^2.1.2",
+    "eslint-plugin-vue": "^5.2.2",
     "file-loader": "^3.0.1",
     "friendly-errors-webpack-plugin": "^1.7.0",
+    "glob": "^7.1.3",
     "html-webpack-plugin": "^3.2.0",
+    "inquirer": "^6.2.2",
     "less": "^3.9.0",
     "less-loader": "^4.1.0",
     "mini-css-extract-plugin": "^0.5.0",
     "node-notifier": "^5.4.0",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
-    "ora": "^3.2.0",
+    "ora": "^3.4.0",
     "portfinder": "^1.0.20",
     "postcss": "^7.0.14",
     "postcss-loader": "^3.0.0",
     "postcss-px-to-viewport": "^1.1.0",
+    "pre-commit": "^1.2.2",
     "precss": "^4.0.0",
     "sass-loader": "^7.1.0",
+    "shelljs": "^0.8.3",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.2",
     "terser-webpack-plugin": "^1.2.3",
