--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
   },
   "dependencies": {
     "vue": "^2.6.10",
-    "vue-router": "^3.0.2"
+    "vue-router": "^3.0.2",
+    "vuex": "^3.1.0"
   }
 }
